--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 
@@ -101,7 +101,7 @@ main {
     display: flex;
     text-align: center;
     justify-content: center;
-} 
+}
 
 .main-desc p {
     text-align: center;
@@ -124,8 +124,8 @@ main {
 }
 
 .btn-1 {
-   background-color: aqua;
-   border: none;
+    background-color: aqua;
+    border: none;
 }
 
 .btn-2 {
@@ -354,12 +354,19 @@ footer div {
     color: rgb(162, 162, 162);
 }
 
-.skill-set {
-    margin: 40px;
+#skills {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+}
+
+.skill-set {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    flex-direction: row;
+    width: 80%;
+
 }
 
 .skill-set div {
@@ -369,7 +376,6 @@ footer div {
     gap: 10px;
     background-color: rgb(21, 21, 21);
     border-radius: 15px;
-    width: 20%;
 }
 
 .skill-set div p {
@@ -415,7 +421,7 @@ footer div {
     font-size: 13px;
 }
 
-.project-about > p {
+.project-about>p {
     color: gray;
 }
 
@@ -486,9 +492,9 @@ footer div {
 }
 
 
-.about-right p svg {    
+.about-right p svg {
     color: aqua;
-} 
+}
 
 svg {
     cursor: pointer;
@@ -499,11 +505,134 @@ button {
 }
 
 nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 70px;
-  background-color: #111;
-  z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: #111;
+    z-index: 1000;
+}
+
+
+/* Mobile */
+@media screen and (max-width: 426px) {
+
+    .main-name {
+        font-size: 30px;
+    }
+
+    .main-desc p {
+        width: 100%;
+    }
+
+    .contact-connect {
+        flex-direction: column-reverse;
+    }
+
+    .skill-set {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .about-left {
+        display: none;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .project-about {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact-connect {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        gap: 40px;
+    }
+
+    .contact-others {
+        width: 80%;
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+
+    }
+
+    .contact-desc {
+        width: 80%;
+    }
+
+    
+
+    .contact-primary {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .project-about {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .about-right {
+        width: 80%;
+    }
+
+    .main-desc p {
+        font-size: 15px;
+        width: 80%;
+    }
+
+}
+
+
+/* Tablet */
+@media screen and (min-width: 426px) and (max-width: 768px) {
+    .about-content {
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .skill-set {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contact-connect {
+        flex-direction: column-reverse;
+    }
+}
+
+/* Laptop */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    /* .about-content {
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    } */
+}
+
+/* Laptop 4k */
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
+    /* None */
+}
+
+@media screen and (min-width: 1440px) {
+    .project-about {
+        display: flex;
+        justify-content: space-between;
+    }
 }
